ID decrement error when deleting a scene, either python or GUI #53052

Closed
opened 2017-10-12 11:51:43 +02:00 by todd doehring · 6 comments

System Information
Win 10, Nvidia GTX 970M

Blender Version
Broken: 2.79 5bd8ac9
Worked:

Short description of error
When deleting a scene, whether from python console, script, or via GUI, this error always appears.
ID user decrement error: SCScene.001 (from '[Main]'): 0 <= 0

The scene does delete, BUT the error itself slows down my script, which is a problem because in my program I am creating and deleting scenes A LOT.
I have not yet tried an earlier Blender version but will.

Steps:

  1. run blender
  2. create a new scene
  3. delete scene --> error appears in console

Thanks,
Todd

**System Information** Win 10, Nvidia GTX 970M **Blender Version** Broken: 2.79 5bd8ac9 Worked: **Short description of error** When deleting a scene, whether from python console, script, or via GUI, this error always appears. ID user decrement error: SCScene.001 (from '[Main]'): 0 <= 0 The scene *does* delete, BUT the error itself slows down my script, which is a problem because in my program I am creating and deleting scenes A LOT. I have not yet tried an earlier Blender version but will. Steps: 1. run blender 2. create a new scene 3. delete scene --> error appears in console Thanks, Todd
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Abemis

Added subscriber: @Abemis

Added subscriber: @zeauro

Added subscriber: @zeauro

I don't know if this error have other undesired effects.

But I confirm that message is present at scene deletion on ubuntu 64bits hash 5ea7298 and official 2.79, too.

Message appears when scene was created by using Copy Settings.

Another message error is present when deleted scene was created by using Link Object Data or Full Copy.

 DAG Zero... not allowed to happen !

The only scene creation that does not create a message error at deletion is Link Objects.

I don't know if this error have other undesired effects. But I confirm that message is present at scene deletion on ubuntu 64bits hash 5ea7298 and official 2.79, too. Message appears when scene was created by using Copy Settings. Another message error is present when deleted scene was created by using Link Object Data or Full Copy. ``` DAG Zero... not allowed to happen ! ``` The only scene creation that does not create a message error at deletion is Link Objects.
Bastien Montagne self-assigned this 2017-10-12 15:02:00 +02:00

This issue was referenced by a51688d0b0

This issue was referenced by a51688d0b066f00d5912d677d0f4bdad08b28ea6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53052
No description provided.